disabled zoom for mobile at the cost of display

--- a/Public/click-party-stylesheet.css
+++ b/Public/click-party-stylesheet.css
@@ -3,11 +3,11 @@ text-align:center;
 }
 
 .hexText{
-  font: bold 20px "Open Sans", Sans-serif;
+  font: bold 2em "Open Sans", Sans-serif;
 }
 
 .text{
-  font: bold 200px "Open Sans", Sans-serif;
+  font: bold 6em "Open Sans", Sans-serif;
 }
 
 .noHighlight{
